--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.3",
+    "isomorphic-fetch": "^2.2.1",
+    "jest-cli": "^24.9.0",
     "react-router-dom": "^5.1.2"
   }
 }
