--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "enzyme-to-json": "^3.4.3",
     "isomorphic-fetch": "^2.2.1",
     "jest-cli": "^24.9.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-test-renderer": "^16.12.0"
   }
 }
