--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.3",
     "isomorphic-fetch": "^2.2.1",
+    "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "react-router-dom": "^5.1.2",
     "react-test-renderer": "^16.12.0"
